[package]
name     = "option-inspect"
version  = "0.2.0"
authors  = ["Matthias Beyer <mail@beyermatthias.de>"]
edition  = "2018"

readme   = "README.md"
license  = "MPL-2.0"

keywords    = ["option", "util"]
description = "Adds the missing Option::inspect() function"

documentation = "https://docs.rs/option-inspect"
repository    = "https://git.beyermatthi.as/option-inspect"

[dependencies]
